--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <link rel="stylesheet" type="text/css" href="css/animate.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
 
-    <script type="text/javascript" defer src="js/ajaxchimp.js"></script>
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/ajaxchimp.js"></script>
 
     <script type="text/javascript" src="js/owl.carousel.min.js"></script>
     <script type="text/javascript" src="js/wow.js"></script>
@@ -366,7 +367,5 @@
     </footer>
 
     <!--  End Footer Section  -->
-
-    <script type="text/javascript" src="js/jquery.js"></script>
   </body>
 </html>
